--- a/JS_Basic1/index.html
+++ b/JS_Basic1/index.html
@@ -12,35 +12,44 @@
 <body>
     <div class="container">
         <h1>JS Basics 1</h1>
-
-        <div id="one">
-
-        </div>
-        <div id="two">
-
-        </div>
-        <div id="three">
-
-        </div>
-        <div id="four">
-
-        </div>
-        <div id="five">
-
-        </div>
     </div>
 
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-
     <script>
+        //1
         let x = [];
-        consloe.log(x);
+        console.log(x);
         x.push('coding', 'dojo', 'rocks');
         x.pop();
         console.log(x);
+
+        //2
+        const y = [];
+        console.log(y);
+        y.push(88);
+        console.log(y);
+
+        //3
+        let z = [9, 10, 6, 5, -1, 20, 13, 2];
+        for (let i = 0; i < z.length; i++) {
+            console.log(z[i]);
+        }
+        for (let i = 0; i < z.length - 1; i++) {
+            console.log(z[i]);
+        }
+
+        //4
+        let names = ['Kadie', 'Joe', 'Fritz', 'Pierre', 'Alphonso'];
+        for (let i = 0; i < names.length; i++) {
+            if (names[i].length == 5) {
+                console.log(names[i]);
+            }
+        }
+
+        //5
+        const yell = string => {
+            return string.toUpperCase();
+        }
+        console.log(yell('hello world'));
     </script>
 </body>
 
