--- a/JS_Math/index.html
+++ b/JS_Math/index.html
@@ -15,6 +15,16 @@
     </div>
 
     <script>
+        const zero_negativity = arr => {
+            for (let i = 0; i < arr.length; i++) {
+                if (arr[i] < 0) {
+                    break;
+                    return false;
+                } else {
+                    return true;
+                }
+            }
+        }
     </script>
 </body>
 
