--- a/JS_Math/index.html
+++ b/JS_Math/index.html
@@ -15,16 +15,45 @@
     </div>
 
     <script>
+        //1
         const zero_negativity = arr => {
+            let noNegative = true;
             for (let i = 0; i < arr.length; i++) {
                 if (arr[i] < 0) {
+                    noNegative = false;
                     break;
-                    return false;
-                } else {
-                    return true;
                 }
             }
+            return noNegative;
         }
+        // console.log(zero_negativity([1, 3, 4, 2, 6, -8]));
+        // console.log(zero_negativity([3, 45, 23, 1, 78, 19, 33, 2]));
+        // console.log(zero_negativity([398, 29, 34, -23, 36, 789]));
+
+        //2
+        const isEven = num => {
+            if (num % 2 === 0) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+        //console.log(isEven(32));
+        //console.log(isEven(3));
+
+        //3
+        const how_many_even = arr => {
+            let sum = 0;
+            for (let i = 0; i < arr.length; i++) {
+                if (arr[i] % 2 === 0) {
+                    sum++;
+                }
+            }
+            return sum;
+        }
+        //console.log(how_many_even([1, 2, 3, 4, 5, 6, 7, 8, 9]));
+
+        //4
     </script>
 </body>
 
