--- a/JS_Math/index.html
+++ b/JS_Math/index.html
@@ -16,6 +16,9 @@
 
     <script>
         //1
+        //Write a function called zero_negativity(). This function should
+        //take an array. Return true if the input array contains no negative
+        //numbers, return false if it does.
         const zero_negativity = arr => {
             let noNegative = true;
             for (let i = 0; i < arr.length; i++) {
@@ -31,6 +34,8 @@
         // console.log(zero_negativity([398, 29, 34, -23, 36, 789]));
 
         //2
+        //Write a function called is_even(). This function should take an number.
+        //Return true if the input number is even, return false if the number is odd.
         const isEven = num => {
             if (num % 2 === 0) {
                 return true;
@@ -42,6 +47,8 @@
         //console.log(isEven(3));
 
         //3
+        //Write a function called how_many_even(). This function should take an
+        //array. Return the total number of elements in the array that are even.
         const how_many_even = arr => {
             let sum = 0;
             for (let i = 0; i < arr.length; i++) {
@@ -54,6 +61,8 @@
         //console.log(how_many_even([1, 2, 3, 4, 5, 6, 7, 8, 9]));
 
         //4
+        //Write a function called create_dummy_array(). This function should take
+        //a number n. Return an array of random numbers between 0 and 9 with the length of n.
         const create_dummy_array = num => {
             let randArr = [];
             for (let i = 0; i < num; i++) {
@@ -65,6 +74,8 @@
         //console.log(create_dummy_array(10));
 
         //5
+        //Write a function called random_choice(). This function should take an
+        //array. Return a random element of the array, based on its length.
         const random_choice = arr => {
             let randNum = Math.floor(Math.random() * arr.length);
             console.log(randNum);
