--- a/JS_Fundamentals/JS_DOM1/index.html
+++ b/JS_Fundamentals/JS_DOM1/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <h1>JS Intermediate</h1>
+        <h1>JS DOM 1</h1>
         <ul id="main">
             <!-- this is empty-->
         </ul>
@@ -31,7 +31,5 @@
         appendList(["Jeff", "Jenny", "Javier", "Joslyn", "Joe", "Jane", "Django"], 'li', 'main');
     </script>
 </body>
-
-</html>
 
 </html>
