--- a/JS_Fundamentals/JS_DOM2/index.html
+++ b/JS_Fundamentals/JS_DOM2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>JS Bacics 1</title>
+    <title>JS DOM 2</title>
     <style type="text/css">
         /* border and styling for table data */
 
