--- a/JS_Fundamentals/JS_Hoisting/index.html
+++ b/JS_Fundamentals/JS_Hoisting/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>JS Bacics 1</title>
+    <title>JS Hoisting</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,10 +11,7 @@
 
 <body>
     <div class="container">
-        <h1>JS DOM 1</h1>
-        <ul id="main">
-            <!-- this is empty-->
-        </ul>
+        <h1>JS Hoisting</h1>
     </div>
 
     <script>
