--- a/JS_Fundamentals/JS_Intermediate/index.html
+++ b/JS_Fundamentals/JS_Intermediate/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>JS Bacics 1</title>
+    <title>JS Intermediate</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
