added Ninja Class 1

--- a/JS_OOP/ninjaClass1/index.html
+++ b/JS_OOP/ninjaClass1/index.html
@@ -18,6 +18,12 @@
     </div>
 
     <script>
+        const Ninja = function(name) {
+            this.name = name;
+            this.health = 100;
+            const speed = 3;
+            const strength = 3;
+        };
     </script>
 </body>
 
