--- a/JS_OOP/ninjaClass3/index.html
+++ b/JS_OOP/ninjaClass3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>JS Ninja Class 3 ES6 Format</title>
+    <title>JS Ninja Class 3 in ES6 Format</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <h1>JS Ninja Class 3 ES6 Format</h1>
+        <h1>JS Ninja Class 3 in ES6 Format</h1>
         <ul id="target">
             <!-- this is empty-->
         </ul>
