deck o cards 2 update

--- a/JS_OOP/deck_O_cards2/index.html
+++ b/JS_OOP/deck_O_cards2/index.html
@@ -13,55 +13,57 @@
 <body>
     <div class="container">
 
-        <h1>Deck O Cards</h1>
+        <div id="btn1" class="btn-group" role="group" aria-label="Basic example">
+            <button id="reset" class="btn btn-danger my-2 my-sm-0" type="button">New Game</button>
+            <button id="shuffle" class="btn btn-success my-2 my-sm-0" type="button">Shuffle</button>
+        </div>
 
         <div id="top" class="container">
+            <div class="navbar1">
+                <div id="btn" class="btn-group" role="group" aria-label="Basic example">
+                    <button type="button" id="pOne" class="btn btn-success">Start Player</button>
+                    <button type="button" id="hOne" class="btn btn-warning">Hit Me</button>
+                    <button type="button" id="dOne" class="btn btn-danger">Discard</button>
+                </div>
+            </div>
+            <div class="navbar2">
+                <div id="btn" class="btn-group" role="group" aria-label="Basic example">
+                    <button type="button" id="pTwo" class="btn btn-success">Start Player</button>
+                    <button type="button" id="hTwo" class="btn btn-warning">Hit Me</button>
+                    <button type="button" id="dTwo" class="btn btn-danger">Discard</button>
+                </div>
+            </div>
             <div id="first">
-                <nav class="navbar navbar-dark bg-dark">
-                    <div id="btn" class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" id="pOne" class="btn btn-primary">Start Player</button>
-                        <button type="button" id="hOne" class="btn btn-danger">Hit Me</button>
-                        <button type="button" id="dOne" class="btn btn-warning">Discard</button>
-                    </div>
-                </nav>
+                <!-- empty div -->
             </div>
 
             <div id="second">
-                <nav class="navbar navbar-dark bg-dark">
-                    <div id="btn" class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" id="pTwo" class="btn btn-primary">Start Player</button>
-                        <button type="button" id="hTwo" class="btn btn-danger">Hit Me</button>
-                        <button type="button" id="dTwo" class="btn btn-warning">Discard</button>
-                    </div>
-                </nav>
+                <!-- empty div -->
             </div>
         </div>
 
         <div id="bottom" class="container">
+            <div class="navbar3">
+                <div id="btn" class="btn-group" role="group" aria-label="Basic example">
+                    <button type="button" id="pThree" class="btn btn-success">Start Player</button>
+                    <button type="button" id="hThree" class="btn btn-warning">Hit Me</button>
+                    <button type="button" id="dThree" class="btn btn-danger">Discard</button>
+                </div>
+            </div>
+            <div class="navbar4">
+                <div id="btn" class="btn-group" role="group" aria-label="Basic example">
+                    <button type="button" id="pFour" class="btn btn-success">Start Player</button>
+                    <button type="button" id="hFour" class="btn btn-warning">Hit Me</button>
+                    <button type="button" id="dFour" class="btn btn-danger">Discard</button>
+                </div>
+            </div>
             <div id="third">
-                <nav class="navbar navbar-dark bg-dark">
-                    <div id="btn" class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" id="pThree" class="btn btn-primary">Start Player</button>
-                        <button type="button" id="hThree" class="btn btn-danger">Hit Me</button>
-                        <button type="button" id="dThree" class="btn btn-warning">Discard</button>
-                    </div>
-                </nav>
+                <!-- empty div -->
             </div>
 
             <div id="fourth">
-                <nav class="navbar navbar-dark bg-dark">
-                    <div id="btn" class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" id="pFour" class="btn btn-primary">Start Player</button>
-                        <button type="button" id="hFour" class="btn btn-danger">Hit Me</button>
-                        <button type="button" id="dFour" class="btn btn-warning">Discard</button>
-                    </div>
-                </nav>
+                <!-- empty div -->
             </div>
-        </div>
-
-        <div id="btn1" class="btn-group" role="group" aria-label="Basic example">
-            <button id="reset" class="btn btn-danger my-2 my-sm-0" type="button">New Game</button>
-            <button id="shuffle" class="btn btn-success my-2 my-sm-0" type="button">Shuffle</button>
         </div>
 
     </div>
