--- a/JS_Advanced/dojoQuery/index.html
+++ b/JS_Advanced/dojoQuery/index.html
@@ -13,9 +13,36 @@
 <body>
     <div class="container">
         <h1>Dojo Query</h1>
+        <button type="button" id="btn_1" class="btn btn-primary">Click Me!</button>
+        <button type="button" id="btn_2" class="btn btn-danger">Hover Over Me!</button>
     </div>
 
     <script>
+        // $Dojo should be a function that returns an object (an HTML element object)
+        // The object returned by the $Dojo function should have 2 added methods “click” and “hover”
+        // The click method that you attach to the object returned by the $Dojo function should take in 1 parameter which is a callback that gets run on that event.
+        // The hover method that you attach to the object returned by the $Dojo function should take in 2 parameters (what happens when you hover in and what happens when you hover out)
+        // Your code should be wrapped in an immediate function that returns the $Dojo function. Here are some relevant built-in JS methods that should help:
+        function $Dojo(id) {
+
+            let obj = document.getElementById(id);
+
+            obj.hover = function(callback) {
+                obj.addEventListener('mouseover', callback);
+            }
+
+            obj.click = function(callback) {
+                obj.addEventListener('click', callback);
+            }
+            return obj;
+        };
+
+        $Dojo('btn_1').click(function() {
+            $('.container').append('<h5>You Clicked Me!');
+        });
+        $Dojo('btn_2').hover(function() {
+            $('.container').append('<h5>You Hovered Over Me!');
+        });
     </script>
 </body>
 
